add delete feature and swagger
