# serverside/swagger.yaml
@@ -120,8 +120,14 @@ paths:
       x-auth-type: Application User
       summary: Retrieve list of sintoms 
       description: |
-         Use this resource to retrieve sintoms. It contains the id of the sintom and translate in catalan, spanish and english.
+         Use this resource to retrieve sintoms. It contains the id of the sintom and translate in catalan (cat), spanish(es) and english (eng).
       operationId: Retrieve sintoms
+      parameters:
+        - in: path
+          name: lang 
+          required: true
+          schema:
+            type: string
       security:
         - bearerAuth: []
       tags:
@@ -143,22 +149,139 @@ paths:
       summary: Create a pacient
       description: |
          Use this resource to create a pacient.
-      operationId: toost pacien
+      operationId: toostpacien
+      security:
+        - bearerAuth: []
+      tags:
+        - Features
+      requestBody:
+        description: birthDate and PCRDate are expressed as integer UnixTimeStamp in milliseconds. In case no sintom or contact is reported, it should be indicated as empty array [].
+        required: true
+        content:
+          application/json:
+            schema:
+              items:
+                $ref: '#/components/schemas/CreatePacient'
+      responses:
+        '200':
+          description: internal id registered
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UriRef'
+        '400':
+          description: If any of the sintoms is not present, or anyother element is null or empty string.
+  '/pacients':
+    get:
+      x-auth-type: Application User
+      summary: Retrieve pacients
+      description: |
+         Use this resource to get all pacients.
+      operationId: getPacients
       security:
         - bearerAuth: []
       tags:
         - Features
       responses:
         '200':
-          description: User attributes
+          description: Array of pacients. No details over sintoms and contacts only PK of them.
           content:
             application/json:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/CreatePacient'
+                  $ref: '#/components/schemas/RetrievePacients'
         '400':
-          description: If auth by token fails
+          description: If any of the sintoms is not present, or anyother element is null or empty string.
+  '/pacient/{pacientid}?lang':
+    get:
+      x-auth-type: Application User
+      summary: get detail of a pacient given a patientid
+      description: |
+         Use this resource to get all pacients.
+      operationId: getPacients
+      security:
+        - bearerAuth: []
+      parameters:
+        - in: path
+          name: patientid  
+          required: true
+          schema:
+            type: string
+        - in: query
+          name: lang  
+          required: false
+          schema:
+            type: string
+            default: cat
+      tags:
+        - Features
+      responses:
+        '200':
+          description: Pacient details.
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/RetrieveOnePacient'
+        '400':
+          description: If any of the sintoms is not present, or anyother element is null or empty string.
+  '/contacts/{pacientid}':
+    get:
+      x-auth-type: Application User
+      summary: get detail of a contacts for a given patientid
+      description: |
+         Use this resource to get all pacients.
+      operationId: getContacts
+      security:
+        - bearerAuth: []
+      parameters:
+        - in: path
+          name: patientid  
+          required: true
+          schema:
+            type: string
+      tags:
+        - Features
+      responses:
+        '200':
+          description: Array of pacients. No details over sintoms and contacts only PK of them.
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/ContactsSchema'
+        '400':
+          description: If the query is not build or element not present.
+  '/pacient/{pacientid}':
+    delete:
+      x-auth-type: Application User
+      summary: delete pacient and its contacts
+      description: |
+         Use this resource to delete a pacient and its contacts
+      operationId: getContacts
+      security:
+        - bearerAuth: []
+      parameters:
+        - in: path
+          name: patientid  
+          required: true
+          schema:
+            type: string
+      tags:
+        - Features
+      responses:
+        '200':
+          description: response ok
+          content:
+            application/json:
+              schema:
+                type: string
+                example: ok
+        '400':
+          description: If the patientid does not exist
 components:
   schemas:
     UriRef:
@@ -321,7 +444,55 @@ components:
         PCRDate: 1234565598650000
         contacts: [{"name": "Carlos1", "surname": "Calvo1", "phone": 123456789}, {"name": "Carlos1", "surname": "Calvo1", "phone": 123456777}]
         sintoms: ["60684b90c609df2b79a8879b", "60684ba4c609df2b79a8879c" ]
+    RetrievePacients:
+      type: array
+      description: Retrieved info from pacients
+      required:
+        - name
+        - surname
+        - phone
+        - birthdate
+        - PCRDate
+        - contacts
+        - sintoms
+      properties:
+        name:
+          type: string
+        surname:
+          type: string
+        phone:
+          type: integer
+        birthdate:
+          type: integer
+        PCRDate:
+          type: integer
+        contacts:
+          type: array
+          items:
+            $ref: '#/components/schemas/ContactId'
+        sintoms:
+          type: array
+          items:
+            $ref: '#/components/schemas/SintomId'        
+      example:
+        name: "John"
+        surname: "Doe"
+        phone: 123456789
+        birthdate: 1234565598650000
+        PCRDate: 1234565598650000
+        contacts: ["60684b90c609df2b79a88666", "60684ba4c609df2b79a8888"]
+        sintoms: ["60684b90c609df2b79a8879b", "60684ba4c609df2b79a8879c" ]  
     SintomId:
+      type: object
+      description: id of the sintom
+      required:
+        - id
+      properties:
+        id:
+          type: string      
+      example:
+        id: "123456abcdef123456789"
+    ContactId:
       type: object
       description: id of the sintom
       required:
@@ -349,6 +520,58 @@ components:
         name: "John"
         surname: "Doe"
         phone: 345678909
+    SintomExtended:
+      type: object
+      description: Sintom Info. Depending on lang selected field sintoma_*** may change.
+      required:
+        - _id
+        - sintoma_cat
+      properties:
+        name:
+          type: string
+        sintoma_cat:
+          type: string
+      example:
+        _id: "123456abcdef"
+        sintoma_cat: "febre"
+    RetrieveOnePacient:
+      type: object
+      description: Retrieved detail info from user
+      required:
+        - name
+        - surname
+        - phone
+        - birthdate
+        - PCRDate
+        - contacts
+        - sintoms
+      properties:
+        name:
+          type: string
+        surname:
+          type: string
+        phone:
+          type: integer
+        birthdate:
+          type: integer
+        PCRDate:
+          type: integer
+        contacts:
+          type: array
+          items:
+            $ref: '#/components/schemas/ContactsSchema'
+        sintoms:
+          type: array
+          items:
+            $ref: '#/components/schemas/SintomExtended'        
+      example:
+        name: "John"
+        surname: "Doe"
+        phone: 123456789
+        birthdate: 1234565598650000
+        PCRDate: 1234565598650000
+        contacts: [{"name": "Carlos1", "surname": "Calvo1", "phone": 123456789}, {"name": "Carlos1", "surname": "Calvo1", "phone": 123456777}]
+        sintoms: [{"_id":"123456abcdef", "sintoma_cat": "febre"} ]        
   securitySchemes:
     bearerAuth:            
       type: http
